--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,17 @@
     "name": "correct-horse-battery/wecamp",
     "type": "project",
     "require": {
+        "php": "^7.2",
         "amphp/http-server": "^0.8.2"
     },
     "autoload": {
         "psr-4": {
             "CorrectHorseBattery\\": "src/"
+        }
+    },
+    "config": {
+        "platform": {
+            "php": "7.2.8"
         }
     }
 }
