--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "type": "project",
     "require": {
         "php": "^7.2",
-        "amphp/http-server": "^0.8.2"
+        "amphp/http-server": "^0.8.2",
+        "monolog/monolog": "^1.23"
     },
     "autoload": {
         "psr-4": {
