--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,17 @@
 version: '3'
 services:
-  web:
+  backend:
     build: .
     ports:
     - "8080:8080"
     volumes:
     - .:/app
     command: php /app/public/app.php
+  frontend:
+    image: node:10
+    ports:
+    - "8081:8080"
+    volumes:
+    - .:/app
+    working_dir: /app
+    command: npm run serve
